<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activities.ReminderActivity">
    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:layout_centerVertical="true"
            android:text="@string/on"
            android:textColor="@color/color_white"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.SwitchCompat
            android:layout_marginRight="14dp"
            android:id="@+id/reminder_switch_onoff"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reminder_layout_setting"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:paddingLeft="14dp"
            android:paddingTop="10dp"
            android:paddingRight="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="8dp"
                android:id="@+id/reminder_text_setting"
                android:text="@string/settings"
                android:textSize="18sp"
                android:textColor="@color/color_text_primary_DarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/reminder_layout_ringtone"
                android:layout_below="@id/reminder_text_setting"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/choose_ringtone"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/reminder_ringtone_name"
                    android:textSize="14sp"
                    android:text="@string/default_string"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_toLeftOf="@id/reminder_switch_silent"
                android:id="@+id/reminder_layout_silent"
                android:layout_below="@id/reminder_layout_ringtone"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/silent_mode"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/silent_mode_text"
                    android:textSize="14sp"
                    android:text="@string/always_remind"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/reminder_switch_silent"
                android:gravity="center_vertical"
                android:layout_alignTop="@id/reminder_layout_silent"
                android:layout_alignBottom="@id/reminder_layout_silent"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/reminder_layout_set_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include android:layout_centerHorizontal="true"
                layout="@layout/set_silent_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/color_text_primary_DarkTheme"
                android:text="Enable Silent Mode to mute full charge alerts during selected time period"
                android:layout_alignParentBottom="true"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>