<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/ic_launcher_background"
            android:layout_centerInParent="true"
            android:layout_width="44dp"
            android:layout_height="44dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RelativeLayout
            android:id="@+id/other_layout_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/other_icon_about"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="10dp"
                android:src="@drawable/ic_mountain_range_on_black_background" />

            <TextView
                android:id="@+id/other_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/other_icon_about"
                android:text="@string/about"
                android:textColor="@color/color_white"
                android:textSize="16dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/other_layout_likeus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/other_icon_like"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="10dp"
                android:src="@drawable/ic_bell" />

            <TextView
                android:id="@+id/other_likeus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/other_icon_like"
                android:text="@string/like_us"
                android:textColor="@color/color_white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/other_notfication_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/other_likeus"
                android:layout_toRightOf="@id/other_icon_like"
                android:text="@string/give_us_5star"
                android:textColor="@color/color_white"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/other_icon_policy"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="10dp"
                android:src="@drawable/ic_mountain_range_on_black_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/other_icon_policy"
                android:text="@string/privacy_policy"
                android:textColor="@color/color_white"
                android:textSize="16dp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>